--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "DD",
+  "name": "Daniel Djakam",
+  "description" : "Hey, I'm DANIEL DJAKAM A Web Developer.",
   "icons": [
     {
+      "src": "favicon16.ico",
+      "sizes": "16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "favicon32.ico",
+      "sizes": "32x32",
+      "type": "image/x-icon"
+    },
+    {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "64x64",
       "type": "image/x-icon"
     },
     {
