--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,27 +4,27 @@
   "description" : "Hey, I'm DANIEL DJAKAM A Web Developer.",
   "icons": [
     {
-      "src": "favicon16.ico",
+      "src": "site/favicon16.ico",
       "sizes": "16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "favicon32.ico",
+      "src": "site/favicon32.ico",
       "sizes": "32x32",
       "type": "image/x-icon"
     },
     {
-      "src": "favicon.ico",
+      "src": "site/favicon.ico",
       "sizes": "64x64",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "site/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "site/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
