--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^11.3.24",
+    "framer-motion": "^11.11.11",
     "my-portfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "swiper": "^11.1.14",
     "tailwind-scrollbar": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
